--- a/src/Pages/MainPage.module.css
+++ b/src/Pages/MainPage.module.css
@@ -4,6 +4,6 @@
 }
 
 .dark {
-    background: black;
+    background: #282828;
     color: white;
 }
